# game

./: .gitignore  .gitpod.yml  Cargo.toml  Dockerfile  Makefile.toml  README.md  build.rs  index-game-simd.html  index-game.html  index.html  lz4.js  rust-toolchain  screen.js  wasm.js  wasm_decompress.js  wasm_decompress_bg.wasm
.cargo/: config.toml
.circleci/: config.yml
assets/: map1.custom
assets/audio/: laser.flac  pew.flac
assets/shaders/: light.frag  light.vert  lighting.frag  lighting_wasm.frag  player.frag  player_wasm.frag  sprite.frag  sprite.vert  sprite_wasm.frag  sprite_wasm.vert
crates/bots/: Cargo.toml  build.rs
crates/bots/bot_lib/: Cargo.toml
crates/bots/bot_lib/src/: lib.rs  map.rs  player.rs
crates/bots/example_bots/: aggro_bot.wasm
crates/bots/example_bots/aggro_bot/: Cargo.toml
crates/bots/example_bots/aggro_bot/src/: lib.rs  map.rs  player.rs
crates/bots/example_bots/aggro_bot/src/player/: lib.rs  mem.rs
crates/bots/example_bots/luke_bot/: Cargo.toml
crates/bots/example_bots/luke_bot/.cargo/: config.toml
crates/bots/example_bots/luke_bot/src/: lib.rs
crates/bots/example_bots/luke_bot/src/map/: lib.rs  mem.rs  mod.rs
crates/bots/example_bots/luke_bot/src/player/: lib.rs  mem.rs
crates/bots/src/: info.rs  lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/game_logic/: Cargo.toml
crates/game_logic/src/: lib.rs
crates/game_types/: Cargo.toml
crates/game_types/crates/lights/: Cargo.toml
crates/game_types/crates/lights/src/: lib.rs  lib_generational_arena.rs
crates/game_types/crates/ui_graphics/: Cargo.toml
crates/game_types/crates/ui_graphics/src/: lib.rs
crates/game_types/src/: graphics.rs  lib.rs  player_attr.rs
crates/helper_functions/: Cargo.toml
crates/helper_functions/src/: graphics.rs  lib.rs
crates/map/: Cargo.toml
crates/map/src/: lib.rs
crates/menus/: Cargo.toml
crates/menus/src/: lib.rs
crates/net/: Cargo.toml
crates/net/src/: lib.rs  setup.rs
crates/net_tcp/: Cargo.toml
crates/net_tcp/crates/tcp_client/: Cargo.toml
crates/net_tcp/crates/tcp_client/src/: lib.rs
crates/net_tcp/crates/tcp_server/: Cargo.toml
crates/net_tcp/crates/tcp_server/src/: lib.rs
crates/net_tcp/crates/tcp_shared/: Cargo.toml
crates/net_tcp/crates/tcp_shared/src/: lib.rs  logic.rs
crates/net_tcp/src/: lib.rs  types.rs
crates/nn/src/: lib.rs
crates/setup_systems/: Cargo.toml  build.rs
crates/setup_systems/crates/setup_graphics/: Cargo.toml
crates/setup_systems/crates/setup_graphics/src/: lib.rs
crates/setup_systems/src/: lib.rs  setup_graphics.rs
crates/super_net/: Cargo.toml
crates/super_net/crates/net_native/crates/native_client/: Cargo.toml
crates/super_net/crates/net_native/crates/native_client/src/: lib.rs
crates/super_net/crates/net_native/crates/native_server/: Cargo.toml
crates/super_net/crates/net_native/crates/native_server/src/: lib.rs
crates/super_net/crates/net_native/crates/native_shared/: Cargo.toml
crates/super_net/crates/net_native/crates/native_shared/src/: logic.rs  native.rs  shared.rs
crates/super_net/crates/net_native/src/: lib.rs  native.rs  types.rs
crates/super_net/crates/net_tcp/: Cargo.toml
crates/super_net/crates/net_tcp/crates/tcp_client/: Cargo.toml
crates/super_net/crates/net_tcp/crates/tcp_client/src/: lib.rs
crates/super_net/crates/net_tcp/crates/tcp_server/: Cargo.toml
crates/super_net/crates/net_tcp/crates/tcp_server/src/: lib.rs
crates/super_net/crates/net_tcp/crates/tcp_shared/: Cargo.toml
crates/super_net/crates/net_tcp/crates/tcp_shared/src/: lib.rs  logic.rs  native.rs  shared.rs
crates/super_net/crates/net_tcp/src/: lib.rs  native.rs
crates/super_net/net_native/: Cargo.toml
crates/super_net/net_native/crates/native_client/src/: lib.rs
crates/super_net/net_native/crates/native_server/src/: lib.rs
crates/super_net/net_native/crates/native_shared/: Cargo.toml
crates/super_net/net_native/crates/native_shared/src/: logic.rs  native.rs  shared.rs
crates/super_net/net_native/src/: native.rs
crates/super_net/src/: lib.rs
crates/tcp_server/: Cargo.toml
crates/tcp_server/src/: lib.rs
game_logic/: Cargo.toml
game_logic/src/: bots.rs  helper_functions.rs  lib.rs  map.rs  net.rs  objects.rs
helper_functions/: Cargo.toml
helper_functions/src/: lib.rs
inkscape/: brick.svgz  enemy.svgz  player.svgz  tree.svgz  wall.svgz  white_tiles.svgz  wood.svgz
resources/: map
src/: bots.rs  components.rs  config.rs  game.rs  game_logic.rs  game_logic_2.rs  helper_functions.rs  helper_functions_2.rs  lib.rs  logic.rs  main.rs  map.rs  map.xml  map2.rs  menus.rs  net.rs  net_wasm.rs  objects.rs  player_attr.rs  player_attributes.rs  player_input.rs  server.rs  server_cli.rs  setup_graphical_systems.rs  setup_systems.rs  shaders.rs  system_labels.rs
src/game/: bots.rs  net.rs
src/game_libs/: bots.rs  map.rs  mod.rs
src/js/: js_functions.js
src/shaders/: light.rs
tiled/: custom.js  floor.tsx  map.custom  map.json  map1.custom  map1.tmx  map2.custom  map2.tmx  map3.custom  map3.tmx  map_objects.tsx  package-lock.json  package.json  player.tsx  tileset.tsx
tools/compress_wasm/: Cargo.toml
tools/compress_wasm/.cargo/: config
tools/compress_wasm/src/: main.rs
