cargo-features = ["named-profiles"]

[package]
name = "game"
version = "0.1.0"
authors = ["William Batista <bootlegbilly@protonmail.ch>", "Luke Gaston <lsgaston@myhoosierneighbors.com>"]
edition = "2018"
resolver = "2"

[profile.dev]
# Since neither me or Luke uses a debugger, turning off debug info should speed up compile times (although it does make debugging shaders a bit more difficult)
debug = 0
opt-level = 0
overflow-checks = false
split-debuginfo = "unpacked"

[profile.dev-windows]
inherits = "dev"

[profile.release]
opt-level = 3
# You don't need overflow checks if your ints never overflow *taps head*
overflow-checks = false
lto = "fat"
panic = "abort"
debug = 0
codegen-units = 1

[profile.fast-web]
inherits = "dev"
panic = "abort"
overflow-checks = false
# Since web builds run like garbage, using a higher optimization level is nice
opt-level = 1

[profile.server_cli]
inherits = "dev"

[profile.server_cli-release]
inherits = "release"

[profile.dev.package."*"]
opt-level = 3

[profile.fast-web-simd.package."*"]
opt-level = 3

[profile.server_cli.package."*"]
opt-level = 3

# The game library is the most time consuming to compile, so I lower the optimization level on just it
[profile.dev.package.game]
opt-level = 1

[profile.server_cli.package.game]
opt-level = 1

[profile.fast-web-simd.package.game]
opt-level = 1

[profile.fast-web-simd]
inherits = "dev"
panic = "abort"
# Since web builds run like garbage, using a higher optimization level is nice
opt-level = 2

[profile.opt-web-simd]
inherits = "release"
lto = "thin"
codegen-units = 16

[profile.release-web-simd]
inherits = "release"

[dependencies]
# The bevy game engine
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false, features = ["serialize"] }

# Allows for building bevy to the web
# TODO: Switch to main smokku branch
bevy_webgl2 = { git = "https://github.com/mrk-its/bevy_webgl2", optional = true }

# A more complex audio library than the one that Bevy uses
#bevy_kira_audio = { git = "https://github.com/billyb2/bevy_kira_audio", branch = "bevy_main", features = ["flac"] }

# Networking library
#bevy_networking_turbulence = { version = "0.3", default-features = false, features = ["use-webrtc"] }
bevy_networking_turbulence = { git = "https://github.com/billyb2/bevy_networking_turbulence", default-features = false, features = ["use-webrtc"] }

# WASM logging
wasm-bindgen = { version = "0.2.78", optional = true }

# Used for sending structs over networks easily and efficiently
serde = { version = "1", features = ["derive"] }
ron = { version = "0.6"}

# Enabling nightly allows using some more optimizations
rand = { version = "0.8", features = ["nightly"] }
fastrand = { version = "1" }

# Easier multi-threading
rayon = { version = "1", optional = true }

# A hashmap that's very fast at storing singular bytes as keys (made by me)
single_byte_hashmap = { version = "0.1", features = ["nightly", "serde"] }

# A faster HashMap
rustc-hash = { version = "1" }

# Config directory locations
directories-next = { version = "2", optional = true }

helper_functions = { path = "crates/helper_functions" }
game_types = { path = "crates/game_types" }
map = { path = "crates/map" }

[features]
default = [
  "native",
  "graphics",
]

use_wgpu = [
  "bevy/bevy_wgpu",
  "bevy/wayland",
  "bevy/x11",
]

graphics = [
  "bevy/bevy_winit", 
  "bevy/png", 
  "bevy/render",
]


native = [
  "parallel",
  "directories-next",
]

parallel = [
  "rayon",
  "single_byte_hashmap/rayon",
  "helper_functions/parallel",
  "map/parallel",
]

web = [
  "graphics",
  "bevy_webgl2",
  "wasm-bindgen",
]

[lib]
name = "game_lib"

[[bin]]
name = "server_cli"
path = "src/server_cli.rs"

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
# The bevy_* patches are specifically for bevy_networking_turbulence
bevy_ecs = { git = "https://github.com/bevyengine/bevy" }
bevy_app = { git = "https://github.com/bevyengine/bevy" }
bevy_tasks = { git = "https://github.com/bevyengine/bevy" }
bevy_core = { git = "https://github.com/bevyengine/bevy" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy" }
# Using the git naia-socket-shared for now since it has the latest rand version
naia-socket-shared = { git = "https://github.com/naia-rs/naia-socket" }
