[package]
name = "game"
version = "0.1.0"
authors = ["William Batista <bootlegbilly@protonmail.ch>", "Luke Gaston <lsgaston@myhoosierneighbors.com>"]
edition = "2021"

[profile.dev]
# Since neither me or Luke uses a debugger, turning off debug info should speed up compile times (although it does make debugging shaders a bit more difficult)
debug = 0
opt-level = 0
overflow-checks = false

[profile.dev-windows]
inherits = "dev"

[profile.release]
opt-level = 3
# You don't need overflow checks if your ints never overflow *taps head*
overflow-checks = false
lto = "fat"
panic = "abort"
debug = 0
codegen-units = 1

[profile.fast-web]
inherits = "dev"
panic = "abort"
overflow-checks = false
# Since web builds run like garbage, using a higher optimization level is nice
opt-level = 1

[profile.server_cli]
inherits = "dev"

[profile.server_cli-release]
inherits = "release"

[profile.dev.package."*"]
opt-level = 3

[profile.fast-web-simd.package."*"]
opt-level = 3

[profile.server_cli.package."*"]
opt-level = 3

# The game library is the most time consuming to compile, so I lower the optimization level on just it
[profile.dev.package.game]
opt-level = 1

[profile.server_cli.package.game]
opt-level = 1

[profile.fast-web-simd.package.game]
opt-level = 1

[profile.dev.package.net]
opt-level = 1

[profile.server_cli.package.net]
opt-level = 1

[profile.fast-web-simd.package.net]
opt-level = 1

[profile.fast-web-simd]
inherits = "dev"
panic = "abort"
# Since web builds run like garbage, using a higher optimization level is nice
opt-level = 1

[profile.opt-web-simd]
inherits = "release"
lto = false
codegen-units = 16

[profile.release-web-simd]
inherits = "release"

[dependencies]
# The bevy game engine
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false, features = ["serialize"] }

# Allows for building bevy to the web
# TODO: Switch to main smokku branch
bevy_webgl2 = { git = "https://github.com/mrk-its/bevy_webgl2", rev = "1b2e3ddb58e2608b9f72dd9a74e7e1979bb72e4b", optional = true }

# A more complex audio library than the one that Bevy uses
#bevy_kira_audio = { git = "https://github.com/billyb2/bevy_kira_audio", branch = "bevy_main", features = ["flac"] }

# Networking library
bevy_networking_turbulence = { git = "https://github.com/billyb2/bevy_networking_turbulence", default-features = false, features = ["use-webrtc"] }

# WASM logging
wasm-bindgen = { version = "0.2.78", optional = true }

# Used for sending structs over networks easily and efficiently
serde = { version = "1", features = ["derive"] }

# RNGs
# Enabling nightly allows using some more optimizations
rand = { version = "0.8", features = ["nightly"] }
fastrand = { version = "1" }

# Easier multi-threading
rayon = { version = "1", optional = true }

# A hashmap that's very fast at storing singular bytes as keys (made by me)
single_byte_hashmap = { version = "0.1", features = ["nightly", "serde"] }

# A faster HashMap
rustc-hash = { version = "1" }

# Lazily initialized vars
lazy_static = { version = "1", optional = true }

# Physics
rapier2d = { version = "0.11", features = ["simd-nightly", "serde-serialize"] }

# A fixed size stack allocated Vector
arrayvec = { version = "0.7" }

# Compiles OpenSSL from scratch
openssl = { version = "0.10", optional = true }

helper_functions = { path = "crates/helper_functions" }
game_types = { path = "crates/game_types" }
map = { path = "crates/map" }
config = { path = "crates/config" }
bots = { path = "crates/bots" }
setup_systems = { path = "crates/setup_systems" }
net = { path = "crates/net" }

[features]
default = [
  "native",
  "graphics",
]

use_wgpu = [
  "bevy/bevy_wgpu",
  "bevy/wayland",
  "bevy/x11",
]

graphics = [
  "bevy/bevy_winit", 
  "bevy/png", 
  "bevy/render",
  "game_types/graphics",
  "setup_systems/graphics",
  "net/graphics",
  "helper_functions/graphics",
]


native = [
  "parallel",
  "config/native",
  "setup_systems/native",
  "net/native",
]

parallel = [
  "rayon",
  "single_byte_hashmap/rayon",
  "helper_functions/parallel",
  "map/parallel",
  "rapier2d/parallel",
  "bots/parallel",
  "net/parallel",
]

web = [
  "graphics",
  "bevy_webgl2",
  "wasm-bindgen",
  "lazy_static",
  "config/web",
  "setup_systems/web",
  "net/web",
]

[lib]
name = "game_lib"

[[bin]]
name = "server_cli"
path = "src/server_cli.rs"

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
# The bevy_* patches are specifically for bevy_networking_turbulence
bevy_ecs = { git = "https://github.com/bevyengine/bevy" }
bevy_app = { git = "https://github.com/bevyengine/bevy" }
bevy_tasks = { git = "https://github.com/bevyengine/bevy" }
bevy_core = { git = "https://github.com/bevyengine/bevy" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy" }
# Using the git naia-socket-shared for now since it has the latest rand version
naia-socket-shared = { git = "https://github.com/naia-rs/naia-socket" }
