[package]
name = "game"
version = "0.1.0"
authors = ["William Batista <bootlegbilly@protonmail.ch>", "Luke Gaston <lsgaston@myhoosierneighbors.com>"]
edition = "2021"

[profile.dev]
opt-level = 0
debug = 0
overflow-checks = false
incremental = true

[profile.dev-windows]
inherits = "dev"

[profile.release]
strip = true
opt-level = 3
# You don't need overflow checks if your ints never overflow *taps head*
overflow-checks = false
lto = "fat"
panic = "abort"
debug = 0
codegen-units = 1

[profile.release-windows]
inherits = "release"

[profile.fast-web-simd]
inherits = "dev"
panic = "abort"
overflow-checks = false
# Since web builds run like garbage, using a higher optimization level is nice
opt-level = 2
debug = 0
strip = false

[profile.server_cli]
inherits = "dev"

[profile.server_cli-release]
inherits = "release"

[profile.dev.package."*"]
opt-level = 3

[profile.fast-web-simd.package."*"]
opt-level = 3

[profile.server_cli.package."*"]
opt-level = 3

# The game library is the most time consuming to compile, so I lower the optimization level on just it
[profile.dev.package.game]
opt-level = 1

[profile.dev.package.setup_systems]
opt-level = 1

[profile.dev.package.map]
opt-level = 1

[profile.server_cli.package.game]
opt-level = 1

[profile.fast-web-simd.package.game]
opt-level = 2

[profile.fast-web-simd.package.setup_systems]
opt-level = 2

[profile.dev.package.net]
opt-level = 1

[profile.server_cli.package.net]
opt-level = 1

[profile.fast-web-simd.package.net]
opt-level = 2

[profile.opt-web-simd]
inherits = "release"
lto = false
codegen-units = 16

[profile.release-web-simd]
strip = false
inherits = "release"

[dependencies]
# The bevy game engine
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false, features = ["serialize"] }

# A more complex audio library than the one that Bevy uses
#bevy_kira_audio = { git = "https://github.com/billyb2/bevy_kira_audio", branch = "bevy_main", features = ["flac"] }

# WASM logging
wasm-bindgen = { version = "0.2.79", optional = true }

# RNGs
rand = { version = "0.8"}
fastrand = { version = "1" }

# Easier multi-threading
rayon = { version = "1", optional = true }

# A hashmap that's very fast at storing singular bytes as keys (made by me)
single_byte_hashmap = { version = "0.1", features = ["nightly", "serde"] }

# A faster HashMap
rustc-hash = { version = "1" }

# Physics
rapier2d = { version = "0.11", features = ["simd-stable", "serde-serialize"] }

# Local libraries
helper_functions = { path = "crates/helper_functions" }
game_types = { path = "crates/game_types" }
map = { path = "crates/map" }
config = { path = "crates/config" }
bots = { path = "crates/bots" }
setup_systems = { path = "crates/setup_systems" }
net = { path = "crates/net" }
game_logic = { path = "crates/game_logic", optional = true }
menus = { path = "crates/menus", optional = true }

[target.'cfg(windows)'.dependencies]
# Compiles OpenSSL from scratch when the vendored feature is enabled
openssl = { version = "0.10", features = ["vendored"] }

[features]
default = [
  "native",
  "graphics",
]

use_wgpu = [
  "bevy/wayland",
  "bevy/x11",
]

graphics = [
  "bevy/bevy_winit", 
  "bevy/png", 
  "bevy/render",
  "bevy/bevy_gilrs",
  "game_types/graphics",
  "setup_systems/graphics",
  "net/graphics",
  "helper_functions/graphics",
  "map/graphics",
  "menus",
  "game_logic",
]


native = [
  "parallel",
  "config/native",
  "setup_systems/native",
  "net/native",
  "menus/native",
]

parallel = [
  "rayon",
  "single_byte_hashmap/rayon",
  "helper_functions/parallel",
  "map/parallel",
  "rapier2d/parallel",
  "bots/parallel",
  "net/parallel",
]

web = [
  "graphics",
  "wasm-bindgen",
  "config/web",
  "setup_systems/web",
  "net/web",
]

[lib]
name = "game_lib"

[[bin]]
name = "server_cli"
path = "src/server_cli.rs"

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
turbulence = { git = "https://github.com/billyb2/turbulence", branch = "v3_clone" }
# The bevy_* patches are specifically for bevy_networking_turbulence
bevy_ecs = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_app = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_tasks = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_core = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy", branch = "main" }
