[package]
name = "game_logic"
version = "0.1.0"
authors = ["William Batista <bootlegbilly@protonmail.ch>", "Luke Gaston <lsgaston@myhoosierneighbors.com>"]
edition = "2018"

[profile.dev]
debug = 0
opt-level = 1

[profile.release]
debug = 0
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
# Unlinke the rand crate, get_ranodm supports every target under the sun, inclulding WASM and iOS which rand doesn't supports
# All targets: https://docs.rs/getrandom/0.2.2/getrandom/
getrandom = { version = "0.2", features = ["js"] }
flate2 = "1"
