[package]
name = "bots"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }
rapier2d = { version = "0.11", features = ["simd-nightly"] }

game_types = { path = "../game_types" }
map = { path = "../map" }
helper_functions = { path = "../helper_functions" }

[features]
parallel = [
	"rapier2d/parallel", 
	"map/parallel", 
	"helper_functions/parallel"
]
