[package]
name = "bots"
version = "0.1.0"
edition = "2021"
crate-type = ["rlib", "dylib"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }
rapier2d = { version = "0.11", features = ["simd-stable"] }
fastrand = { version = "1" }

game_types = { path = "../game_types" }
map = { path = "../map" }
helper_functions = { path = "../helper_functions" }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
wasmer = { version = "2", default-features = false, features = ["sys", "default-universal"] }
wasmer-compiler-singlepass = { version = "2", default-features = false, features = ["std"] }
wasmer-engine-universal = { version = "2", features = ["compiler"] }

[target.'cfg(target_arch="wasm32")'.dependencies]
wasmer = { version = "2", default-features = false, features = ["js-default"] }

[features]
parallel = [
	"rapier2d/parallel", 
	"map/parallel", 
	"helper_functions/parallel",
	"wasmer-compiler-singlepass/rayon",
]
