[package]
name = "game_logic"
version = "0.1.0"
edition = "2021"

crate-type = ["rlib", "dylib"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }
rapier2d = { version = "0.11", features = ["simd-nightly"] }
single_byte_hashmap = { version = "0.1", features = ["nightly"] }

game_types = { path = "../game_types" }
map = { path = "../map" }
helper_functions = { path = "../helper_functions", features = ["graphics"] }