[package]
name = "game_types"
version = "0.1.0"
edition = "2021"
crate-type = ["rlib", "dylib"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }
arrayvec = { version = "0.7", features = ["serde"] }
rapier2d = { version = "0.11", features = ["simd-nightly", "serde-serialize"] }
serde = { version = "1", features = ["derive"] }
rand = { version = "0.8", features = ["nightly"] }
fastrand = { version = "1" }
single_byte_hashmap = { version = "0.1", features = ["nightly", "serde"] }

[features]
graphics = []