[package]
name = "game_types"
version = "0.1.0"
edition = "2021"
crate-type = ["rlib", "dylib"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }
rapier2d = { version = "0.11", features = ["simd-stable", "serde-serialize"] }
serde = { version = "1", features = ["derive"] }
rand = { version = "0.8" }
fastrand = { version = "1" }
arrayvec = { version = "0.7" }
single_byte_hashmap = { version = "0.1", features = ["nightly", "serde"] }

# Graphics only libs
ui_graphics = { path = "crates/ui_graphics", optional = true }

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2.79"
bootleg_networking = { git = " https://github.com/billyb2/bootleg_networking", default-features = false, features = ["web"] }
#bootleg_networking = { path = "../../../bootleg_networking", default-features = false, features = ["web"] }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
bootleg_networking = { git = " https://github.com/billyb2/bootleg_networking", default-features = false, features = ["native"] }
#bootleg_networking = { path = "../../../bootleg_networking", default-features = false, features = ["native"] }

[features]
graphics = [
	"ui_graphics",
	"bevy/render",
]
