[package]
name = "helper_functions"
version = "0.1.0"
edition = "2021"
crate-type = ["rlib", "dylib"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }
rayon = { version = "1", optional = true }

[features]
parallel = [
    "rayon"
]
graphics = []

[patch.crates-io]
glam = { git = "https://github.com/bitshifter/glam-rs" }
