[package]
name = "map"
version = "0.1.0"
edition = "2021"

[dependencies]
# CRC32 is a very fast hashing algorithm for verifying files
# Nightly is enabled to do some optimizations
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false, features = ["render"] }


crc32fast = { version = "1", features = ["nightly"] }
#LZ4 is a very fast compression algorithm
lz4_flex = { version = "0.9", default-features = false, features = ["checked-decode", "frame"] }

# Just a regular HashMap
rustc-hash = { version = "1" }
single_byte_hashmap = { version = "0.1", features = ["nightly"] }

rayon = { version = "1", optional = true }

rapier2d = { version = "0.11", features = ["simd-nightly"]}

game_types = { path = "../game_types" }
helper_functions = { path = "../helper_functions" }


[features]
parallel = [
    "rayon",
	"single_byte_hashmap/rayon",
	"helper_functions/parallel",
]
