[package]
name = "net"
version = "0.1.0"
edition = "2021"
crate-type = ["rlib", "dylib"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }
bevy_networking_turbulence = { git = "https://github.com/billyb2/bevy_networking_turbulence", default-features = false, features = ["use-webrtc"] }
single_byte_hashmap = { version = "0.1", features = ["nightly", "serde"] }
rapier2d = { version = "0.11", features = ["simd-nightly"]}
rayon = { version = "1", optional = true }

game_types = { path = "../game_types" }
map = { path = "../map" }
net_tcp = { path = "../net_tcp", optional = true }

[features]
graphics = []
native = [
	"net_tcp",
]
web = []
parallel = [
	"rayon",
	"single_byte_hashmap/rayon",
]