[package]
name = "net"
version = "0.1.0"
edition = "2021"
crate-type = ["rlib", "dylib"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }
bevy_networking_turbulence = { git = "https://github.com/billyb2/bevy_networking_turbulence", branch = "publicized_06", default-features = false, features = ["use-webrtc"] }
single_byte_hashmap = { version = "0.1", features = ["nightly", "serde"] }
rapier2d = { version = "0.11", features = ["simd-stable"]}
rayon = { version = "1", optional = true }

game_types = { path = "../game_types" }
helper_functions = { path = "../helper_functions", optional = true }
map = { path = "../map" }
bootleg_networking = { git = "https://github.com/billyb2/bootleg_networking", default-features = false }
#bootleg_networking = { path = "../../../bootleg_networking", default-features = false }


[features]
graphics = []
native = [
	"bootleg_networking/native",
	"helper_functions",
]
web = [
	"bootleg_networking/web",
]
parallel = [
	"rayon",
	"single_byte_hashmap/rayon",
]

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_app = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_tasks = { git = "https://github.com/bevyengine/bevy", branch = "main" }
