[package]
name = "net_tcp"
version = "0.1.0"
edition = "2021"
crate-type = ["rlib", "dylib"]

[dependencies]
bevy_app = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy", branch = "main" }

dashmap = { version = "4", features = ["rayon"] }

# Not compiling all of Tokio, just it's useful async networking stuff
tokio = { version = "1", features = ["parking_lot", "rt-multi-thread", "net"] }

bincode = { version = "1" }
serde = { version = "1" }

tcp_server = { path = "crates/tcp_server" }
tcp_client = { path = "crates/tcp_client" }
tcp_shared = { path = "crates/tcp_shared" }
