[package]
name = "setup_systems"
version = "0.1.0"
edition = "2021"
crate-type = ["rlib", "dylib"]

[dependencies]
bots = { path = "../bots" }
game_types = { path = "../game_types" }
map = { path = "../map" }

bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }
single_byte_hashmap = { version = "0.1", features = ["nightly", "serde"] }
rapier2d = { version = "0.11", features = ["simd-stable", "serde-serialize"] }

setup_graphics = { path = "crates/setup_graphics", optional = true }

[features]
parallel = [
  "single_byte_hashmap/rayon",
  "map/parallel",
  "rapier2d/parallel",
  "bots/parallel",
]
graphics = ["setup_graphics"]

native = []
web = []
