[package]
name = "tcp_server"
version = "0.1.0"
edition = "2021"
crate-type = ["rlib", "dylib"]

[dependencies]
bevy_app = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_utils = { git = "https://github.com/bevyengine/bevy", branch = "main" }
dashmap = { version = "4", features = ["rayon"] }
# Not compiling all of Tokio, just it's useful async networking stuff
tokio = { version = "1", features = ["net", "parking_lot", "rt-multi-thread", "sync", "io-util"] }
