[package]
name = "tcp_server"
version = "0.1.0"
edition = "2021"
crate-type = ["rlib", "dylib"]

[dependencies]
bevy_app = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy", branch = "main" }

bevy_utils = { git = "https://github.com/bevyengine/bevy", branch = "main" }
dashmap = { version = "4", features = ["rayon"] }
arrayvec = { version = "0.7" }

bytes = { version = "1" }

# Not compiling all of Tokio, just it's useful async networking stuff
tokio = { version = "1", features = ["net", "parking_lot", "rt-multi-thread", "sync", "io-util"] }
futures = { version = "0.3" }

bincode = { version = "1" }
serde = { version = "1" }
tokio-util = { version = "0.6", features = ["codec"] }
