[package]
name = "lights"
version = "0.1.0"
edition = "2021"

crate-type = ["rlib", "dylib"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false, features = ["render"] }
arrayvec = { version = "0.7" }
#generational-arena = { version = "0.2" }
