[package]
name = "net_tcp"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = { version = "4", features = ["rayon"], optional = true }

# Not compiling all of Tokio, just it's useful async networking stuff
tokio = { version = "1", features = ["parking_lot", "net"], optional = true }

bincode = { version = "1" }

tcp_server = { path = "crates/tcp_server", optional = true }
tcp_client = { path = "crates/tcp_client", optional = true }
tcp_shared = { path = "crates/tcp_shared" }

[features]
native = [
	"dashmap",
	"tokio",
	"tcp_client",
	"tcp_server",
	"tcp_shared/native"

]
web = [
	"tcp_shared/web"
]