[package]
name = "tcp_server"
version = "0.1.0"
edition = "2021"

[dependencies]
parking_lot = { version = "0.11" }
tokio = { version = "1", features = ["net", "parking_lot", "rt-multi-thread", "sync"] }
bincode = { version = "1" }
dashmap = { version = "4", features = ["rayon"] }

tcp_shared = { path = "../tcp_shared" }